--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
 MONGO_URL="mongodb+srv://anurag2426yadav:anurag123456789@cluster0.cdhtzy8.mongodb.net/mern_estate?retryWrites=true&w=majority"
+JWT_SECRET="ANURAGLOVEJAVAANDJAVASCRIPT"
